syntax = "proto3";

package golpje;

message Empty {}

message ProtoShow {
    string ID = 1;
    string Name = 2;
    string Regexp = 3;
    bool Active = 4;
    bool Seasonal = 5;
    int64 Minimal = 6;
}

message ProtoEpisode {
    string ID = 1;
    string Title = 2;
    string Showid = 3;
    int64 Added = 4;
    string Magnetlink = 5;
    string Episodeid = 6;
    bool Downloaded = 7;
    bool Downloading = 8;
}

message ProtoShows {
    repeated ProtoShow Shows = 1;
}

message ProtoEpisodes {
    repeated ProtoEpisode Episodes = 1;
}

message ShowRequest {
    bool Onlyactive = 1;
    string Name = 2;
}

message AddShowResponse {
    ProtoShow Show = 1;
    bool Success = 2;
    string Error = 3;
}

message EpisodeRequest {
    string Showid = 1;
    uint32 Season = 2;
}

message AddEpisodeResponse {
    ProtoEpisode Episode = 1;
    bool Success = 2;
    string Error = 3;
}

message SyncShowResponse {
    int64 FoundEpisodes = 1;
    bool Success = 2;
    string Error = 3;
}

message SyncShowRequest {
    string ShowID = 1;
}

service Golpje {
    rpc GetShows (ShowRequest) returns (ProtoShows) {}
    rpc AddShow (ProtoShow) returns (AddShowResponse) {}
    rpc DelShow (ProtoShow) returns (AddShowResponse) {}
    rpc SyncShow (SyncShowRequest) returns (SyncShowResponse) {}

    rpc GetEpisodes (EpisodeRequest) returns (ProtoEpisodes) {}
    rpc AddEpisode (ProtoEpisode) returns (AddEpisodeResponse) {}
}
